fix(Profile):fixed profile blurr css issue

--- a/src/modules/Dashboard/modules/Profile/components/EditProfilePopUp/pages/EditProfilePopUp.module.css
+++ b/src/modules/Dashboard/modules/Profile/components/EditProfilePopUp/pages/EditProfilePopUp.module.css
@@ -84,7 +84,7 @@
 
 @media (max-width: 1500px) {
     .edit_profile_container {
-        left: unset;
+        left: 0;
     }
 }
 
